--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "cookie-parser": "^1.4.6",
     "express": "^4.17.3",
     "simple-json-db": "^2.0.0",
-    "socket.io": "^4.4.1"
+    "socket.io": "^4.4.1",
+    "svg-captcha": "^1.4.0"
   }
 }
