--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "bad-words": "^3.0.4",
     "cookie-parser": "^1.4.6",
     "express": "^4.17.3",
+    "imgbb-uploader": "^1.3.5",
     "simple-json-db": "^2.0.0",
     "socket.io": "^4.4.1",
     "svg-captcha": "^1.4.0"
